--- a/index.html
+++ b/index.html
@@ -46,40 +46,46 @@
 
     <div class="table">
         <table>
-            <tr>
-                <th>SNO.</th>
-                <th>Startup Name</th>
-                <th>Startup Description</th>
-            </tr>
-            <tr>
-                <td>1.</td>
-                <td>WOwIndia</td>
-                <td>A startup with WOW Ideas.</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td>Loreum Ipsum</td>
-                <td>Loreum Ipsum Text</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td>Loreum Ipsum</td>
-                <td>Loreum Ipsum Text</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td>Loreum Ipsum</td>
-                <td>Loreum Ipsum Text</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td>Loreum Ipsum</td>
-                <td>Loreum Ipsum Text</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>SNO.</th>
+                    <th>Startup Name</th>
+                    <th>Startup Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1.</td>
+                    <td>WOwIndia</td>
+                    <td>A startup with WOW Ideas.</td>
+                </tr>
+                <tr>
+                    <td>2.</td>
+                    <td>Loreum Ipsum</td>
+                    <td>Loreum Ipsum Text</td>
+                </tr>
+                <tr>
+                    <td>2.</td>
+                    <td>Loreum Ipsum</td>
+                    <td>Loreum Ipsum Text</td>
+                </tr>
+                <tr>
+                    <td>2.</td>
+                    <td>Loreum Ipsum</td>
+                    <td>Loreum Ipsum Text</td>
+                </tr>
+                <tr>
+                    <td>2.</td>
+                    <td>Loreum Ipsum</td>
+                    <td>Loreum Ipsum Text</td>
+                </tr>
+            </tbody>
             <tfoot id="last">
-                <td>00</td>
-                <td>Final Footer</td>
-                <td>Loreum Ipsum Text</td>
+                <tr>
+                    <td>00</td>
+                    <td>Final Footer</td>
+                    <td>Loreum Ipsum Text</td>
+                </tr>
             </tfoot>
         </table>
     </div>
